# ligen-standalone

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
docs/: LEGACY_ASTROFLOW.md  LIGEN_BRANDING.md  LIGEN_CANON_V4.md  LIGEN_MODULES.md  LIGEN_ROADMAP.md  VERCEL_DEPLOY.md
ligen/: __init__.py
ligen/api/: app.py
ligen/api/routes/: charts.py  reports.py  sessions.py
ligen/charts/: __init__.py  wheel.py
ligen/cli/: cli.py
ligen/core/: __init__.py  engine.py
ligen/data/: __init__.py  db.py  models.py  repository.py
ligen/layout/: __init__.py
ligen/lineage/: __init__.py  engine.py  synastry.py
ligen/prompts/: __init__.py  loader.py
ligen/prompts/blocks/: A01.md  A02.md  A03.md  A04.md  A05.md  A06.md  A07.md  A08.md  A09.md  A10.md  A11.md  A12.md  A13.md  A14.md  B01.md  B02.md  B03.md  B04.md  B05.md  B06.md  C01.md  C02.md  C03.md  C04.md  C05.md  C06.md
ligen/reports/: __init__.py  generator.py  lineage_report.py
ligen/reports/templates/: lineage_report.html.j2  report.html.j2
ligen/synastry/: __init__.py
tests/: test_api.py  test_cli.py  test_core.py  test_data.py  test_lineage.py  test_reports.py  test_wheel.py
